Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86672

Context menu pops up while "grp:menu_toggle" is set

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.15.2
    • 5.15.1
    • WebEngine
    • None
    • qutebrowser, KDE Falkon
    • Linux/Wayland
    • 39857cd7a2f5d819b100e8839b0f6d5d1b2d9cdd (qt/qtwebengine/5.15)

      Description
      I use Sway as my display manager and I type two languages. For me, the most comfortable key for switchitg keyboard layouts is Menu key, so I have "grp:menu_toggle" as one of the xkb_options in my Sway config file. With this option enabled, QtWebEngine-based browsers is the only programs to keep popping up context menu so I consider this a bug.

      How to reproduce
      With block of text below in Sway config file and qutebrowser active, being in any mode other than command mode, press the Menu button.

      input * {

      xkb_layout "us, ru"

      xkb_variant ","

      xkb_options "grp:menu_toggle"

      }

      Expected behavior
      I want Menu key to just switch keyboard layouts — like in any other programs inside Sway. My primary web browser is qutebrowser (I submitted this issue at it's repo first), but I tested KDE Falkon also and got the same behavior.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            cacud iskander n
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes