Do not pass a native keycode matching the menu key when it is remapped

Chromium will recreate the original mapping based on the native keycode,
breaking any remapping.

Fixes: QTBUG-86672
Change-Id: I4b7e6f7434049cdf7250bee1ef759a9df4d4987c
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>